--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,67 @@
     transform: rotate(360deg);
   }
 }
+
+.header {
+ height: 100vh;
+ 
+}
+
+.headers {
+	padding-top: 30vh;
+	color: white;
+}
+
+.block1 {
+margin-top: 70px;
+margin-bottom: 100px;
+}
+
+.H1 {
+	font-family: 'Oswald', Helvetica, Arial, Lucida, sans-serif;
+		text-transform: uppercase;
+		font-size: 80px;
+		letter-spacing: 0.05em;
+		line-height: 1em;
+		text-align: center;
+}
+
+.H2 {
+	font-family: 'Nunito', Helvetica, Arial, Lucida, sans-serif;
+		font-weight: 600;
+		font-size: 20px;
+		line-height: 1.9em;
+}
+
+.H3 {
+	font-family: 'Oswald', Helvetica, Arial, Lucida, sans-serif;
+		text-transform: uppercase;
+		font-size: 40px;
+		letter-spacing: 1px;
+		line-height: 1.5em;
+}
+
+.text {
+	font-family: 'Nunito', Helvetica, Arial, Lucida, sans-serif;
+		font-size: 18px;
+		letter-spacing: 1px;
+}
+
+.main-link-list{
+	display: flex;
+	justify-content: space-evenly;
+	margin: 0 25% ;
+
+}	
+
+.main-link{
+	width: 300px;
+	height: 200px;
+	padding: 20px;
+	text-align: center;
+}
+
+.main-link img{
+	width: 280px;
+	height: 280px;
+}
