--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,13 @@ margin-bottom: 100px;
 
 }	
 
+.main-link-list-2 {
+	display: flex;
+	justify-content: space-evenly;
+	margin: 8% 25%;
+
+}
+
 .main-link{
 	width: 300px;
 	height: 200px;
@@ -99,4 +106,10 @@ margin-bottom: 100px;
 .main-link img{
 	width: 280px;
 	height: 280px;
+}
+
+.main-link:hover {
+	transition: .5s;
+	transform: scale(1.1);
+	cursor: pointer;
 }
